# Daniel_Agent_Project

./: .gitignore  ARCHITECTURE.md  README.md
frontend/: README.md  index_livekit.html  index_public.html
frontend/css/: main.css
frontend/js/: app.js  audioHandler.js  config.js  livekitHandler.js  utils.js  videoHandler.js  websocketHandler.js
resources/elevenLabs/: prompt.txt
resources/odoo/: data.py
services/mcp-odoo/: ARCHITECTURE.md  BUILD_SCRIPTS_README.md  Dockerfile  README.md  README_DETALLADO.md  build-dev.sh  create_test_quotation.py  pyproject.toml  run_server.sh  server.py  verify_update_logic.py
services/mcp-odoo/core/: README.md  __init__.py  api.py  bulk_email_service.py  config.py  email_logger.py  helpers.py  logger.py  odoo_client.py  quotation_service.py  tasks.py  whatsapp.py
services/mcp-odoo/docs/: ARQUITECTURA_HIBRIDA_ANALISIS.md  CHANGELOG_SERVICE_LAYER.md  FLUJO_SECUENCIA_COTIZACION.md  S3_LOGS_SETUP.md  SERVICE_LAYER_ARCHITECTURE.md  WHATSAPP_HANDOFF.md
services/mcp-odoo/scripts/: README.md
services/mcp-odoo/tools/: README.md  __init__.py  crm.py  search.py  whatsapp.py
services/serverAvatar/: ARCHITECTURE.md  README.md  pyproject.toml  server.py
services/serverAvatar/core/: README.md  __init__.py  config.py
services/serverAvatar/handlers/: README.md  __init__.py  http_handlers.py  websocket_handler.py
services/serverAvatar/services/: README.md  __init__.py  elevenlabs_service.py  heygen_service.py
services/serverAvatar/utils/: README.md  __init__.py
